--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ with the goal to exercise HTML and CSS skills"
     <header class="grid grid__header">
       <nav>
         <h2>
-          <img src="/src/assets/logo.svg" alt="Equalizer Logo" />
+          <img src="./src/assets/logo.svg" alt="Equalizer Logo" />
         </h2>
       </nav class="relative">
       <div class=" big-illustration grid__illustration grid">
