--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ with the goal to exercise HTML and CSS skills"
       </nav class="relative">
       <div class=" big-illustration grid__illustration grid">
           <div class="big-illustration__rectangle-blue grid__blue"></div> 
-              <!-- preto, verm , amarelo -->
+              <!-- black, red , yellow -->
               <div class="flex grid__triple">
                 <div class="big-illustration__rectangle-black"></div>
                 <div class="flex column">
@@ -38,12 +38,12 @@ with the goal to exercise HTML and CSS skills"
                   <div class="big-illustration__small-circle-yellow"></div>
               </div>
             </div>
-            <!-- fim  -->
-              <!-- linhas -->
+            <!-- end  -->
+              <!-- lines -->
               <div class="big-illustration__circle-line flex align-itens-center grid__void">
                 <div class="big-illustration__small-circle-line"></div>
               </div>  
-              <!-- fim Linhas -->
+              <!-- end lines -->
           <div class="big-illustration__circle-red grid__red"></div>
           <div class="big-illustration__circle-black grid__black"></div>
       </div>
@@ -100,7 +100,7 @@ with the goal to exercise HTML and CSS skills"
     <footer class="flex space-between">
         <div class="footer__info flex">
           <h2>
-              <img src="/src/assets/logo.svg" alt="Equalizer Logo" />
+              <img src="./src/assets/logo.svg" alt="Equalizer Logo" />
           </h2>
           <div class="footer__p">
             <p>All rights reserved © Equalizer 2021</p>
